--- a/package.json
+++ b/package.json
@@ -12,12 +12,16 @@
     "start-ui-dev": "cd ui-react && npm start"
   },
   "dependencies": {
+    "@azure/msal-node": "^1.9.0",
+    "@microsoft/microsoft-graph-client": "^3.0.2",
+    "dotenv": "^16.0.1",
     "ews-javascript-api": "0.11.0",
     "express": "4.18.1",
     "grunt": "1.5.3",
     "grunt-contrib-sass": "2.0.0",
     "grunt-contrib-watch": "1.1.0",
+    "isomorphic-fetch": "^3.0.0",
+    "msal-node": "^0.0.1-security",
     "socket.io": "4.5.1"
-  },
-  "devDependencies": {}
+  }
 }
