feat: :recycle: added more configurable options

--- a/.env.template
+++ b/.env.template
@@ -1,4 +1,14 @@
-export USERNAME=
-export PASSWORD=
-export DOMAIN=
-export PORT=
+EWS_USERNAME=
+EWS_PASSWORD=
+EWS_URI=
+DOMAIN=
+
+OAUTH_CLIENT_ID=
+OAUTH_AUTHORITY=
+OAUTH_CLIENT_SECRET=
+
+PORT=
+
+SEARCH_USE_GRAPHAPI=
+SEARCH_MAXDAYS=
+SEARCH_MAXITEMS=
