feat: :sparkles: more configurable options for roomlists and rooms, limited selection of data-fields in query

--- a/.env.template
+++ b/.env.template
@@ -7,8 +7,10 @@ OAUTH_CLIENT_ID=
 OAUTH_AUTHORITY=
 OAUTH_CLIENT_SECRET=
 
-PORT=
-
 SEARCH_USE_GRAPHAPI=
 SEARCH_MAXDAYS=
+SEARCH_MAXROOMLISTS=
+SEARCH_MAXROOMS=
 SEARCH_MAXITEMS=
+
+PORT=
