--- a/.env.template
+++ b/.env.template
@@ -1,16 +1,15 @@
 EWS_USERNAME=
 EWS_PASSWORD=
 EWS_URI=
-DOMAIN=
+DOMAIN=example.com
 
-OAUTH_CLIENT_ID=
-OAUTH_AUTHORITY=
-OAUTH_CLIENT_SECRET=
+OAUTH_CLIENT_ID=0c9c8ca8-5a1a-11ed-9b6a-0242ac120002
+OAUTH_AUTHORITY=XuR8Q~OotnWOrUholnAZWu4p~5VplaCBGUZA1a9S
+OAUTH_CLIENT_SECRET=https://login.microsoftonline.com/00afbbe0-5a1a-11ed-9b6a-0242ac120002
 
-SEARCH_USE_GRAPHAPI=
-SEARCH_MAXDAYS=
-SEARCH_MAXROOMLISTS=
-SEARCH_MAXROOMS=
-SEARCH_MAXITEMS=
+SEARCH_USE_GRAPHAPI=true
+SEARCH_MAXROOMLISTS=10
+SEARCH_MAXDAYS=10
+SEARCH_MAXITEMS=6
 
-PORT=
+PORT=8080
