docs: :memo: fixed typo in docs, thanks @kaktuseek

--- a/.env.template
+++ b/.env.template
@@ -4,8 +4,8 @@ EWS_URI=
 DOMAIN=example.com
 
 OAUTH_CLIENT_ID=0c9c8ca8-5a1a-11ed-9b6a-0242ac120002
-OAUTH_AUTHORITY=XuR8Q~OotnWOrUholnAZWu4p~5VplaCBGUZA1a9S
-OAUTH_CLIENT_SECRET=https://login.microsoftonline.com/00afbbe0-5a1a-11ed-9b6a-0242ac120002
+OAUTH_AUTHORITY=https://login.microsoftonline.com/00afbbe0-5a1a-11ed-9b6a-0242ac120002
+OAUTH_CLIENT_SECRET=XuR8Q~OotnWOrUholnAZWu4p~5VplaCBGUZA1a9S
 
 SEARCH_USE_GRAPHAPI=true
 SEARCH_MAXROOMLISTS=10
